--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,12 @@
     padding: 0;
     margin: 0;
 }
-
+/* The main background color */
 body {
     background-color: #d9dcd6;
 }
 
+/* styling the header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -26,6 +27,7 @@ h1 .seo {
     color: #d9dcd6;
 }
 
+/* the headers in the aside section */
 h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -41,16 +43,19 @@ nav {
     list-style-type: none;
 }
 
+/* List Items within Nav Bar */
 li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* Nav Bar Links */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* All paragraph text */
 p {
     font-size: 16px;
 }
@@ -94,10 +99,12 @@ p {
     color: #ffffff;
 }
 
+/* Image within Content Section */
 .content img {
     max-height: 200px;
 }
 
+/* Headers in Content Section */
 .content h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -116,17 +123,22 @@ p {
     
 }
 
+
+
+/* The benefits section container */
 .benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* Images within benefits section */
 .benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* Styles for footer */
 .footer {
     padding: 30px;
     clear: both;
@@ -134,6 +146,7 @@ p {
     text-align: center;
 }
 
+/* Heading in footer */
 .footer h2 {
     font-size: 20px;
 }
